BUG 4088, 4089, 4091, 4098, 4102, 4096, 4095, BUG: Also fixes a problem where if you had really really long column      names in your source column it'll break the layout. BUG: Also fixes the bug where column entries can't be dragged around.
QA: Retest all.

To-be-

--- a/app/styles/screen-dataset-new.sass
+++ b/app/styles/screen-dataset-new.sass
@@ -186,8 +186,16 @@
         .columnTypeCell
           width: 22em
 
+          .uniform.selector
+            @include ie7-inline-block
+
         .columnSourceCell
           width: 22em
+
+          .uniform.selector
+            @include ie7-inline-block
+            max-width: 22em // in case they have ridiculously long column names
+            overflow: hidden
 
         .columnActionCell
           float: none
@@ -334,6 +342,12 @@
 
     .presets
       float: left
+
+      .ie7 &
+        width: 40em
+
+      > *
+        @include ie7-inline-block
 
       label
         font-size: 1.3em
